--- a/src/pages/timers/timers.scss
+++ b/src/pages/timers/timers.scss
@@ -1,3 +1,15 @@
 timers {
+    .list {
+        margin-top: 30px;
 
+        .item {
+            font-size: 2.5rem;
+            color: #A99378;
+            padding-top: 8px;
+
+            .item-inner {
+                border: 0px;
+            }
+        }
+    }
 }
